unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/IAC_Input_Status_Notes_Comments__c.field-meta.xml
<CustomField>
    <fullName>IAC_Input_Status_Notes_Comments__c</fullName>
    <label>IAC Input Status Notes/Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>