unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Ideal_BPM_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Ideal_BPM_Due_Date__c</fullName>
    <defaultValue>today() +
CASE(
MOD(today() - DATE( 1900, 1, 7 ), 7),
0,5,
6,6,
14)</defaultValue>
    <inlineHelpText>due date may change based on complexity</inlineHelpText>
    <label>Ideal BPM Due Date</label>
    <type>Date</type>
</CustomField>