unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Industry_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Industry_Vertical__c</fullName>
    <label>Industry Vertical</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Alcoholic Beverages</fullName>
            </value>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>Brand Manufacturer</fullName>
            </value>
            <value>
                <fullName>Computer Software and Applications</fullName>
            </value>
            <value>
                <fullName>Consumer Electronics</fullName>
            </value>
            <value>
                <fullName>Consumer Packaged Goods</fullName>
            </value>
            <value>
                <fullName>Crypto-Currency</fullName>
            </value>
            <value>
                <fullName>Dining Out</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Entertainment</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Fitness &amp; Exercise</fullName>
            </value>
            <value>
                <fullName>Food &amp; Beverage</fullName>
            </value>
            <value>
                <fullName>Government Business</fullName>
            </value>
            <value>
                <fullName>Health &amp; Beauty</fullName>
            </value>
            <value>
                <fullName>Home + Garden</fullName>
            </value>
            <value>
                <fullName>Industry</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>Medical Health</fullName>
            </value>
            <value>
                <fullName>Non-Profit Organizations</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pets</fullName>
            </value>
            <value>
                <fullName>Pharmaceutical Drugs</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Shipping</fullName>
            </value>
            <value>
                <fullName>Sports</fullName>
            </value>
            <value>
                <fullName>Style &amp; Fashion</fullName>
            </value>
            <value>
                <fullName>Technology &amp; Computing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>