unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Interesting_Insights_Found__c.field-meta.xml
<CustomField>
    <fullName>Interesting_Insights_Found__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interesting Insights Found</label>
    <type>Checkbox</type>
</CustomField>