unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/International_Account__c.field-meta.xml
<CustomField>
    <fullName>International_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>International Account</label>
    <type>Checkbox</type>
</CustomField>