unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Invoice_Number_s_to_be_revised__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number_s_to_be_revised__c</fullName>
    <label>Invoice Number(s) to be revised</label>
    <type>TextArea</type>
</CustomField>