unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/IO__c.field-meta.xml
<CustomField>
    <fullName>IO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IO</label>
    <referenceTo>IO__c</referenceTo>
    <relationshipLabel>Requests</relationshipLabel>
    <relationshipName>Requests</relationshipName>
    <type>Lookup</type>
</CustomField>