unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Key_Narrative_Questions__c.field-meta.xml
<CustomField>
    <fullName>Key_Narrative_Questions__c</fullName>
    <inlineHelpText>Background on client goals/new initiatives?
What are the goals &amp; desired outcomes for meeting/presentation? 
What 2-3 things is the brand trying to find out/accomplish? Any specific insights? What is/isn’t working well for this brand? Anything to highlight? Any objections? Any new products to include?</inlineHelpText>
    <label>Key Narrative Questions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>