unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Key_Questions_to_Answer_With_Insights__c.field-meta.xml
<CustomField>
    <fullName>Key_Questions_to_Answer_With_Insights__c</fullName>
    <inlineHelpText>What are the specific questions you would like to answer?</inlineHelpText>
    <label>Key Questions to Answer With Insights</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>