unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/KPI_Benchmark__c.field-meta.xml
<CustomField>
    <fullName>KPI_Benchmark__c</fullName>
    <label>KPI Benchmark</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>