unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/KPI_Measurement__c.field-meta.xml
<CustomField>
    <fullName>KPI_Measurement__c</fullName>
    <label>KPI Measurement</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CPL</fullName>
            </value>
            <value>
                <fullName>CPA</fullName>
            </value>
            <value>
                <fullName>Upper Funnel/Brand Awareness</fullName>
            </value>
            <value>
                <fullName>Mid Funnel (Engagement)</fullName>
            </value>
            <value>
                <fullName>GMV/On-site Sales</fullName>
            </value>
            <value>
                <fullName>CPC</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Not Known Yet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>