unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/List_of_Brands__c.field-meta.xml
<CustomField>
    <fullName>List_of_Brands__c</fullName>
    <description>INTEG - N || ** eBay Advertising ** || WF - N || AP - N || VAL - N ||Class - N || Definition: List of Brands || CR - 00523786</description>
    <label>List of Brands</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>