unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/List_of_Personas__c.field-meta.xml
<CustomField>
    <fullName>List_of_Personas__c</fullName>
    <description>INTEG - N || ** eBay Advertising ** || WF - N || AP - N || VAL - N ||Class - N || Definition: List of Personas || CR - 00523786</description>
    <label>List of Personas</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>