unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Makegood_Value__c.field-meta.xml
<CustomField>
    <fullName>Makegood_Value__c</fullName>
    <description>INTEG - N || ** eBay Advertising ** || WF - N || AP - N || VAL - N ||Class - N || Definition: Makegood Value || CR - 00554322</description>
    <label>Makegood Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>