unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Manager_s_Approval__c.field-meta.xml
<CustomField>
    <fullName>Manager_s_Approval__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>INTEG - N || ** eBay Advertising ** || WF - N || AP - N || VAL - N ||Class - N || Definition: Manager&#39;s Approval || CR - 00405201</description>
    <label>Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Advertising_Request_Portal2</relationshipName>
    <type>Lookup</type>
</CustomField>