unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Media_Plan_Request__c.field-meta.xml
<CustomField>
    <fullName>Media_Plan_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Media Plan Request</label>
    <referenceTo>Media_Plan__c</referenceTo>
    <relationshipLabel>Requests</relationshipLabel>
    <relationshipName>Requests</relationshipName>
    <type>Lookup</type>
</CustomField>