unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Meeting_ORO__c.field-meta.xml
<CustomField>
    <fullName>Meeting_ORO__c</fullName>
    <label>Meeting ORO</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>