unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>INTEG - N || ** eBay Advertising ** || WF - N || AP - N || VAL - N ||Class - N || Definition: Record Name || CR - 00405201</description>
    <label>Name</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>