unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/New_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>New_Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>INTEG - N || ** eBay Advertising ** || WF - N || AP - N || VAL - N ||Class - N || Definition: New Sales Rep|| CR - 00405201</description>
    <label>New Account Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Advertising_Request_Portal1</relationshipName>
    <type>Lookup</type>
</CustomField>