unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Number_of_minutes_to_present_data__c.field-meta.xml
<CustomField>
    <fullName>Number_of_minutes_to_present_data__c</fullName>
    <inlineHelpText>This will help us know how much data to include and in what amount of time we can talk through the data points</inlineHelpText>
    <label>Number of minutes to present data</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>