unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Number_of_Placements_Requested__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Placements_Requested__c</fullName>
    <description>INTEG - N || ** eBay Advertising ** || WF - N || AP - N || VAL - N ||Class - N || Definition: Number of Placements Requested || CR - 00405201</description>
    <label>Number of Placements Requested</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>