unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Objective_of_Campaign_Segment_Requested__c.field-meta.xml
<CustomField>
    <fullName>Objective_of_Campaign_Segment_Requested__c</fullName>
    <inlineHelpText>What is the goal outcome of the client receiving data?</inlineHelpText>
    <label>Insight Objectives</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>