unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Offshore_Actual_Send_Back_to_CSI_Date__c.field-meta.xml
<CustomField>
    <fullName>Offshore_Actual_Send_Back_to_CSI_Date__c</fullName>
    <label>Offshore Actual Send Back to CSI Date</label>
    <type>Date</type>
</CustomField>