unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Offshore_Expected_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Offshore_Expected_Start_Date__c</fullName>
    <label>Offshore Expected Start Date</label>
    <type>Date</type>
</CustomField>