unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Offshore_Input_ETA__c.field-meta.xml
<CustomField>
    <fullName>Offshore_Input_ETA__c</fullName>
    <label>Offshore Input ETA</label>
    <type>Date</type>
</CustomField>