unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Offshore_Resource_2__c.field-meta.xml
<CustomField>
    <fullName>Offshore_Resource_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Offshore Resource 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Requests6</relationshipName>
    <type>Lookup</type>
</CustomField>