unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Offshore_Resource_3__c.field-meta.xml
<CustomField>
    <fullName>Offshore_Resource_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Offshore Resource 3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Requests5</relationshipName>
    <type>Lookup</type>
</CustomField>