unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Offshore_Resource__c.field-meta.xml
<CustomField>
    <fullName>Offshore_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>INTEG - N || ** eBay Advertising ** || WF - N || AP - N || VAL - N ||Class - N || Definition: Offshore Resource || CR - 00492715</description>
    <label>Offshore Resource</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>