unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>INTEG - N || ** eBay Advertising ** || WF - N || AP - N || VAL - N ||Class - N || Definition: Opportunity || CR - 00405201</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Advertising_Request_Portal</relationshipName>
    <type>Lookup</type>
</CustomField>