unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Type__c</fullName>
    <description>INTEG - N || ** eBay Advertising ** || WF - N || AP - N || VAL - N ||Class - N || Definition: Opportunity Type|| CR - 00405201</description>
    <formula>TEXT(Opportunity__r.Type)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Type</label>
    <type>Text</type>
</CustomField>