unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Original_Campaign_Size__c.field-meta.xml
<CustomField>
    <fullName>Original_Campaign_Size__c</fullName>
    <description>INTEG - N || ** eBay Advertising ** || WF - N || AP - N || VAL - N ||Class - N || Definition: Original Campaign Size || CR - 00405201</description>
    <label>Original Campaign Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>