unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Parent_Request__c.field-meta.xml
<CustomField>
    <fullName>Parent_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Request</label>
    <referenceTo>Advertising_Request_Portal__c</referenceTo>
    <relationshipLabel>Requests</relationshipLabel>
    <relationshipName>Requests</relationshipName>
    <type>Lookup</type>
</CustomField>