unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>INTEG - N || ** eBay Advertising ** || WF - N || AP - N || VAL - N ||Class - N || Definition: Phone || CR - 00405201</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>