unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Placement_Type__c.field-meta.xml
<CustomField>
    <fullName>Placement_Type__c</fullName>
    <description>INTEG - N || ** eBay Advertising ** || WF - N || AP - N || VAL - N ||Class - N || Definition: Placement Type || CR - 00405201</description>
    <label>Placement Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cross Device</fullName>
            </value>
            <value>
                <fullName>Mobile Only</fullName>
            </value>
            <value>
                <fullName>Desktop Only</fullName>
            </value>
            <value>
                <fullName>Contextual/BT Targeting</fullName>
            </value>
            <value>
                <fullName>Audience/Custom Audience targeting</fullName>
            </value>
            <value>
                <fullName>Other targeting</fullName>
            </value>
            <value>
                <fullName>Homepage Takeover W/ NPD</fullName>
            </value>
            <value>
                <fullName>Homepage Takeover W/out NPD</fullName>
            </value>
            <value>
                <fullName>Category Takeover</fullName>
            </value>
            <value>
                <fullName>Supernova</fullName>
            </value>
            <value>
                <fullName>No Targeting ROS</fullName>
                <label>ROS-No Targeting</label>
            </value>
            <value>
                <fullName>Halo/1PD</fullName>
            </value>
            <value>
                <fullName>Audience/Contextual Targeting</fullName>
            </value>
            <value>
                <fullName>Takeovers/Roadblocks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>