unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Product3__c.field-meta.xml
<CustomField>
    <fullName>Product3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Requests (Product)</relationshipLabel>
    <relationshipName>Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>