unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Products_we_are_pitching__c.field-meta.xml
<CustomField>
    <fullName>Products_we_are_pitching__c</fullName>
    <label>Products we are pitching</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PLS</fullName>
            </value>
            <value>
                <fullName>PLA</fullName>
            </value>
            <value>
                <fullName>PLX</fullName>
            </value>
            <value>
                <fullName>1PD</fullName>
            </value>
            <value>
                <fullName>1P - Storefront</fullName>
            </value>
            <value>
                <fullName>3P</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>