unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Purpose_Objective_of_this_meeting__c.field-meta.xml
<CustomField>
    <fullName>Purpose_Objective_of_this_meeting__c</fullName>
    <inlineHelpText>Is it a renewal, first meeting, etc?</inlineHelpText>
    <label>Purpose/Objective of this meeting?</label>
    <type>TextArea</type>
</CustomField>