unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Reason_for_Revision__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Revision__c</fullName>
    <inlineHelpText>Please be as specific as possible and upload any supporting documentation</inlineHelpText>
    <label>Reason for Revision</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>