unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Reoccurring_Cadence__c.field-meta.xml
<CustomField>
    <fullName>Reoccurring_Cadence__c</fullName>
    <label>Reoccurring Cadence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>