unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Reoccurring_Request__c.field-meta.xml
<CustomField>
    <fullName>Reoccurring_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reoccurring Request?</label>
    <type>Checkbox</type>
</CustomField>