unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Reoccurring_Request_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Reoccurring_Request_Start_Date__c</fullName>
    <label>Reoccurring Request Start Date</label>
    <type>Date</type>
</CustomField>