unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Request_Completor__c.field-meta.xml
<CustomField>
    <fullName>Request_Completor__c</fullName>
    <label>Request Completor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accenture</fullName>
            </value>
            <value>
                <fullName>DOMO</fullName>
            </value>
            <value>
                <fullName>NA BizOps Advanced Analytics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>