unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Request_Includes__c.field-meta.xml
<CustomField>
    <fullName>Request_Includes__c</fullName>
    <label>Request Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Request_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Custom Audience to be Built</fullName>
            </value>
            <value>
                <fullName>Audience Update to be Built</fullName>
            </value>
            <value>
                <fullName>CRM Audience to be Built</fullName>
            </value>
            <value>
                <fullName>Shopalike Audience</fullName>
            </value>
            <value>
                <fullName>AB Test Split</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>