unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Sales/New Client</fullName>
            </value>
            <value>
                <fullName>Existing Client</fullName>
            </value>
            <value>
                <fullName>Custom Audience</fullName>
            </value>
            <value>
                <fullName>eAAT Domo Dashboard New Persona and/or Brand Request</fullName>
            </value>
            <value>
                <fullName>Revision</fullName>
            </value>
            <value>
                <fullName>Marketing/Vertical Story</fullName>
            </value>
            <value>
                <fullName>Pre Sales</fullName>
            </value>
            <value>
                <fullName>House Ads</fullName>
            </value>
            <value>
                <fullName>Campaign is sold/live</fullName>
            </value>
            <value>
                <fullName>New</fullName>
                <isActive>false</isActive>
                <label>New</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>