unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Requested_Budget__c.field-meta.xml
<CustomField>
    <fullName>Requested_Budget__c</fullName>
    <description>INTEG - N || ** eBay Advertising ** || WF - N || AP - N || VAL - N ||Class - N || Definition: Requested Budget || CR - 00405201</description>
    <label>Requested Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>