unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Requested_Rate2__c.field-meta.xml
<CustomField>
    <fullName>Requested_Rate2__c</fullName>
    <label>Requested Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>