unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Requested_Rate__c.field-meta.xml
<CustomField>
    <fullName>Requested_Rate__c</fullName>
    <description>INTEG - N || ** eBay Advertising ** || WF - N || AP - N || VAL - N ||Class - N || Definition: Requested Rate || CR - 00405201</description>
    <label>Requested Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>