unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Requested_Revised_Amount__c.field-meta.xml
<CustomField>
    <fullName>Requested_Revised_Amount__c</fullName>
    <label>Requested Revised Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>