unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Segment_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Segment_Due_Date__c</fullName>
    <label>Segment Due Date</label>
    <type>Date</type>
</CustomField>