unpackaged/main/default/objects/Advertising_Request_Portal__c/fields/Segment_Order__c.field-meta.xml
<CustomField>
    <fullName>Segment_Order__c</fullName>
    <label>Segment Order</label>
    <type>TextArea</type>
</CustomField>